--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-#Ignore all
-*
-
-#Un - Ignore files with extensions
-!*.*
-
-#Un - Ignore Directories
-!*/
-
-#Un - Ignore Makefiles
-!Makefile
+*.out
